Comment out unused code